[package]
name = "ahri"
version = "1.0.0"
edition = "2021"
description = "ahri is a database 🗳"
repository = "https://github.com/AuracleTech/ahri"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
