[package]
name = "ahri"
version = "1.0.1"
edition = "2021"
description = "ahri is a database 🗳"
repository = "https://github.com/AuracleTech/ahri"
license = "MIT"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
mysql = "*"

[[bench]]
name = "ahri"
harness = false


[[bench]]
name = "mysql"
harness = false
